--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Login */
+.form-login {
+    padding: 2rem 1.5rem;
+    border: 1px solid #3f4055;
+    border-radius: 0.5rem;
+    height: 19rem;
+    width: 20rem;
+    background-color: #3f4055;
+    -webkit-box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.75);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.boton {
+    width: 40%;
 }
